gitlab/ingress-gitlab.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: public-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: gitlab.172.50.0.29.nip.io
    http:
      paths:
      - backend:
          serviceName: gitlab
          servicePort: 80
